@@ -1,5 +1,6 @@
 next release
 ------------
+-new component: predict_prokaryotic_gene_function
 -Prokaryotic_Annotation_Pipeline: moved tmhmm and lipoprotein_motif earlier in the pipeline so they can be used in functional prediction step
 -CHANGELOG: now in reverse chronological order
 
